[gd_scene load_steps=3 format=3 uid="uid://ijrc7w7nnile"]

[ext_resource type="Script" uid="uid://c5x8pwl1y53am" path="res://item.gd" id="1_ph0dh"]
[ext_resource type="Texture2D" uid="uid://dvbb7kxjyjbod" path="res://assets/icon/alert/orange_alert.svg" id="2_ttk8k"]

[node name="Item" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_ph0dh")

[node name="Sprite2D" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0

[node name="Button" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="alert" type="Button" parent="Sprite2D"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_bottom = 28.0
grow_horizontal = 0
tooltip_text = "УЯЗВИМОСТИ"
icon = ExtResource("2_ttk8k")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="Sprite2D/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Sprite2D/Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="Sprite2D/alert" to="." method="_on_alert_button_down"]
